[Spellcheck] Look up browser context directly.

Looking it up via the RenderProcessHost fails, because the identity
doesn't seem to attached to an RPH.

It's not entirely clear why, but it removes an unnecessary redirection either way, so here it is.

R=xiaochengh@chromium.org

Bug: 844126
Change-Id: I487d47d974b0c6ad45e90bb669a5b34f0b076717
Reviewed-on: https://chromium-review.googlesource.com/1063117
Commit-Queue: Rachel Blum <groby@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559770}
Former-commit-id: 7cdf18f8b5ff707820ceb8c2e18ec3e5b75a9ad0